RESOLVED FIXED304109
The webm videos on this page don't play in Safari (work in Firefox and Chrome)
https://bugs.webkit.org/show_bug.cgi?id=304109
Summary The webm videos on this page don't play in Safari (work in Firefox and Chrome)
Jean-Yves Avenard [:jya]
Reported 2025-12-13 03:54:56 PST
The webm videos on https://github.com/WICG/declarative-partial-updates/blob/main/snap-to-activate-explainer.md show with broken play buttons. They work in both Firefox and Chrome.
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2025-12-14 01:24:04 PST
Jean-Yves Avenard [:jya]
Comment 2 2025-12-14 01:25:03 PST
EWS
Comment 3 2025-12-16 06:02:17 PST
Committed 304510@main (7738281a461e): <https://commits.webkit.org/304510@main> Reviewed commits have been landed. Closing PR #55373 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.